--- a/.travis.yml
+++ b/.travis.yml
@@ -9,3 +9,7 @@ rvm:
 gemfile:
   - gemfiles/3.2.gemfile
   - gemfiles/4.0.gemfile
+matrix:
+  exclude:
+    - rvm: 1.9.2
+      gemfile: gemfiles/4.0.gemfile
