--- a/.travis.yml
+++ b/.travis.yml
@@ -1,15 +1,28 @@
 language: ruby
 rvm:
+  - ruby-head
   - 2.0.0
   - 1.9.3
   - 1.9.2
+  - 1.8.7
+  - ree
   - jruby-head
   - jruby-19mode
+  - jruby-18mode
   - rbx-19mode
+  - rbx-18mode
 gemfile:
   - gemfiles/3.2.gemfile
   - gemfiles/4.0.gemfile
 matrix:
   exclude:
     - rvm: 1.9.2
+      gemfile: gemfiles/4.0.gemfile
+    - rvm: 1.8.7
+      gemfile: gemfiles/4.0.gemfile
+    - rvm: ree
+      gemfile: gemfiles/4.0.gemfile
+    - rvm: jruby-18mode
+      gemfile: gemfiles/4.0.gemfile
+    - rvm: rbx-18mode
       gemfile: gemfiles/4.0.gemfile
